# smart-privacy-shield

./: .gitignore  README.md  encrypt.py  package-lock.json  package.json  requirements.txt  stego.py
backend/: blockchain_utils.py  check_mp.py  cloud_utils.py  encrypt.py  image_utils.py  main.py  pyproject.toml  stego.py  test_chain.py
blockchain/: hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: PrivacyShield.sol
blockchain/scripts/: deploy.js
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ImageUpload.jsx  SendSecret.jsx  UploadDashboard.jsx  Vault.jsx  WalletConnect.jsx
images/encrypted/: test.png.roi
images/keys/: cover_stego.png.xml  test.png.xml  testcov_stego.png.xml
tests/: test_stego.py
