[tool.poetry]
package-mode = false

[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "saitama696", email = "abbassangameshwari@gmail.com"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "web3 (>=7.14.1,<8.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "protobuf (==3.20.3)",
    "mediapipe (==0.10.9)",
    "easyocr (>=1.7.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "boto3 (>=1.42.63,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
